--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- ===============================================-->
     <main>
       <div id="preloader">
-        <div class="loader"><span></span><span></span><span></span><span></span></div>
+        <div class="loader"><</div>
       </div>
       <div class="showcase">
 
